--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,13 +1,22 @@
-*{
-  font-size: 40px;
-  font-family: 'Quicksand', sans-serif;
-}
+
 nav{
   background-color: black;
 }
 h1{
-  font-size: 4vw;
+  font-size: 4.2em;
   font-family: 'Monoton', cursive;
+  color: white;
+  text-shadow: 
+  0 0 5px #7bacff,
+  0 0 10px #7bacff,
+  0 0 20px #7bacff,
+  0 0 40px #7bacff,
+  0 0 80px #7bacff,
+  0 0 9px #7bacff,
+  0 0 1px #7bacff,
+  0 0 10px #7bacff;
+}
+h2{
   color: white;
   text-shadow: 
   0 0 5px #7bacff,
@@ -18,9 +27,7 @@ h1{
   0 0 90px #7bacff,
   0 0 100px #7bacff,
   0 0 150px #7bacff;
-}
-h2{
-  color: #52b2bf;
+  font-size: 2.7em;
   font-family: 'JetBrains Mono', monospace;
 }
 li{
