--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -3,9 +3,9 @@
     <div class="col-md-12">
       <form >
         <div class="input-group">
-          <input type="text" class="form-control form-control-lg" placeholder="Input User" aria-label="Input User" aria-describedby="searchUser">
+          <input type="text" #user class="form-control form-control-lg" placeholder="Input User" aria-label="Input User" aria-describedby="searchUser">
           <div class="input-group-append">
-            <button class="btn btn-info" type="button" id="searchUser">Search</button>
+            <button (click)='getUser(user.value)' class="btn btn-info" type="button" id="searchUser">Search</button>
           </div>
         </div>
       </form>      
