--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,14 +1,30 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
-      <form >
+      <form>
         <div class="input-group">
-          <input type="text" #user class="form-control form-control-lg" placeholder="Input User" aria-label="Input User" aria-describedby="searchUser">
+          <input type="text" #userSearch class="form-control form-control-lg" placeholder="Input userSearch"
+            aria-label="Input userSearch" aria-describedby="searchUser">
           <div class="input-group-append">
-            <button (click)='getUser(user.value)' class="btn btn-info" type="button" id="searchUser">Search</button>
+            <button (click)='getUser(userSearch)' class="btn btn-info" type="button" id="searchUser">Search</button>
           </div>
         </div>
-      </form>      
+      </form>
+    </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-md-10">
+      <div class="card">
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item"><img [src]="userService.userSearch.avatar" alt="userSearch's avatar"></li>
+          <li class="list-group-item">NAME: {{userService.userSearch.name}}</li>
+          <li class="list-group-item">BIO: {{userService.userSearch.bio}}</li>
+          <li class="list-group-item">REPOSITORIES: {{userService.userSearch.repos}}</li>
+          <li class="list-group-item">FOLLOWERS: {{userService.userSearch.followers}}</li>
+          <li class="list-group-item">FOLLOWING: {{userService.userSearch.following}}</li>
+          <li class="list-group-item">CREATED: {{userService.userSearch.created}}</li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
