--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -3,10 +3,10 @@
     <div class="col-md-12">
       <form>
         <div class="input-group">
-          <input type="text" #userSearch class="form-control form-control-lg" placeholder="Input userSearch"
+          <input type="text" #user class="form-control form-control-lg" placeholder="Input userSearch"
             aria-label="Input userSearch" aria-describedby="searchUser">
           <div class="input-group-append">
-            <button (click)='getUser(userSearch)' class="btn btn-info" type="button" id="searchUser">Search</button>
+            <button (click)='getUser(user)' class="btn btn-info" type="button" id="searchUser">Search</button>
           </div>
         </div>
       </form>
