add routing to repositories component

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,7 +9,7 @@
         <a class="nav-link" routerLink='/users'routerLinkActive='active'><h2>UserSearch</h2><span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#"><h2>RepositorySearch</h2></a>
+        <a class="nav-link" routerLink='/repos' routerLinkActive='active'><h2>RepositorySearch</h2></a>
       </li>
     </ul>
   </div>
