--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -3,8 +3,8 @@
     <div class="col-md-12">
       <form>
         <div class="input-group">
-          <input type="text" #user class="form-control form-control-lg" placeholder="Input userSearch"
-            aria-label="Input userSearch" aria-describedby="searchUser">
+          <input type="text" #user class="form-control form-control-lg" placeholder="Input User" aria-label="Input User"
+            aria-describedby="searchUser">
           <div class="input-group-append">
             <button (click)='getUser(user)' class="btn btn-info" type="button" id="searchUser">Search</button>
           </div>
@@ -12,17 +12,14 @@
       </form>
     </div>
   </div>
-  <div class="row justify-content-center">
-    <div class="col-md-10">
-      <div class="card">
+  <div class="row">
+    <div class="col-md-10" >
+      <div class="card" *ngFor='let result of service.results'>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item"><img [src]="userService.userSearch.avatar" alt="userSearch's avatar"></li>
-          <li class="list-group-item">NAME: {{userService.userSearch.name}}</li>
-          <li class="list-group-item">BIO: {{userService.userSearch.bio}}</li>
-          <li class="list-group-item">REPOSITORIES: {{userService.userSearch.repos}}</li>
-          <li class="list-group-item">FOLLOWERS: {{userService.userSearch.followers}}</li>
-          <li class="list-group-item">FOLLOWING: {{userService.userSearch.following}}</li>
-          <li class="list-group-item">CREATED: {{userService.userSearch.created}}</li>
+          <li class="list-group-item"><img [src]="result.avatar" alt="USER's AVATAR"></li>
+          <li class="list-group-item">USERNAME: {{result.name}}</li>
+          <li class="list-group-item">USER ID: {{result.id}}</li>
+          <li class="list-group-item">PROFILE LINK: <a [href]="result.repo">My Profile</a></li>
         </ul>
       </div>
     </div>
