--- a/src/app/repositories/repositories.component.html
+++ b/src/app/repositories/repositories.component.html
@@ -22,8 +22,8 @@
           <li class="list-group-item">DESCRIPTION: {{repoResult.description}}</li>
           <li class="list-group-item">LANGUAGE: {{repoResult.language}}</li>
           <li class="list-group-item">FORKS: {{repoResult.fork}}</li>
-          <li class="list-group-item">CREATED: {{repoResult.createdDate}}</li>
-          <li class="list-group-item">UPDATED: {{repoResult.updatedDate}}</li>
+          <li class="list-group-item">CREATED: {{repoResult.createdDate|date}}</li>
+          <li class="list-group-item">UPDATED: {{repoResult.updatedDate|date}}</li>
 
         </ul>
       </div>
