--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -25,8 +25,8 @@
 
       <div class="col-md-6" *ngFor='let repo of repos'>
 
-        <div class="card">
-          <div class="card-body">
+        <div  class="card">
+          <div appChangeColor class="card-body">
             <h5 class="card-title">NAME: {{repo.name}}</h5><hr>
             <p class="card-text">DESCRIPTION: {{repo.description}}</p>
             <p class="card-text">LANGUAGE: {{repo.language}}</p>
