--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+  <ng-progress></ng-progress>
   <div class="row">
     <div class="col-md-12">
       <form>
@@ -14,8 +15,8 @@
   </div>
   <div class="row justify-content-center">
     <div class="col-md-6" >
-      <div class="card" *ngFor='let result of service.results'>
-        <ul class="list-group">
+      <div  class="card" *ngFor='let result of service.results'>
+        <ul  class="list-group">
           <li class="list-group-item " id="image"><img [src]="result.avatar" alt="USER's AVATAR"></li>
           <li class="list-group-item">USERNAME: {{result.name}}</li>
           <li class="list-group-item">USER ID: {{result.id}}</li>
